--- a/ansible/roles/grafana/templates/grafana/grafana.ini.j2
+++ b/ansible/roles/grafana/templates/grafana/grafana.ini.j2
@@ -38,18 +38,18 @@ http_addr = 0.0.0.0
 http_port = {{ grafana.http_internal_port }}
 
 # The public facing domain name used to access grafana from a browser
-;domain = localhost
+domain = {{ grafana.domain }}
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
-;enforce_domain = false
+enforce_domain = {{ 'true' if grafana.domain != '_' else 'false' }}
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-;root_url = %(protocol)s://%(domain)s:%(http_port)s/
+root_url = %(protocol)s://%(domain)s:%(http_port)s{{ grafana.subpath }}
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
-;serve_from_sub_path = false
+serve_from_sub_path = true
 
 # Log web requests
 ;router_logging = false
