--- a/ansible/roles/prometheus/templates/systemd/prometheus.service.j2
+++ b/ansible/roles/prometheus/templates/systemd/prometheus.service.j2
@@ -6,7 +6,7 @@ After=network.target
 [Service]
 Type=simple
 WorkingDirectory={{ prometheus.dir }}
-ExecStart={{ prometheus.dir }}/prometheus --config.file {{ prometheus.dir }}/prometheus.yml --web.console.templates {{ prometheus.dir }}/consoles --web.console.libraries {{ prometheus.dir }}/console_libraries --web.listen-address='127.0.0.1:{{ prometheus.http_internal_port }}'
+ExecStart={{ prometheus.dir }}/prometheus --config.file {{ prometheus.dir }}/prometheus.yml --web.console.templates {{ prometheus.dir }}/consoles --web.console.libraries {{ prometheus.dir }}/console_libraries --web.listen-address='127.0.0.1:{{ prometheus.http_internal_port }}' --web.external-url={{ prometheus.subpath }}
 ExecStartPost={{ server.apps_dir}}/check_port.sh {{ prometheus.http_internal_port }} 60 5
 User={{ server.user }}
 PermissionsStartOnly=true
