--- a/ansible/roles/nginx/templates/nginx/cordra.j2
+++ b/ansible/roles/nginx/templates/nginx/cordra.j2
@@ -22,9 +22,7 @@ server {
         listen [::]:{{ item.value.external_port }};
 
         location / {
-           proxy_set_header   X-Forwarded-For $remote_addr;
-           proxy_set_header   Host $http_host;
-           proxy_pass {{ item.value.internal_protocol }}://127.0.0.1:{{ item.value.internal_port }}/;
+           return 301 https://$server_name$request_uri;
         }
     {% endif %}
 }
