--- a/ansible/roles/nginx/templates/nginx/ds_viewer.j2
+++ b/ansible/roles/nginx/templates/nginx/ds_viewer.j2
@@ -23,9 +23,7 @@ server {
         listen [::]:{{ item.value.external_port }};
 
         location / {
-           proxy_set_header   X-Forwarded-For $remote_addr;
-           proxy_set_header   Host $http_host;
-           proxy_pass {{ item.value.internal_protocol }}://dsviewer;
+           return 301 https://$server_name$request_uri;
         }
     {% endif %}
 }
