--- a/ansible/roles/nginx/templates/nginx/ds_viewer.j2
+++ b/ansible/roles/nginx/templates/nginx/ds_viewer.j2
@@ -23,7 +23,7 @@ server {
         listen [::]:{{ item.value.external_port }};
 
         location / {
-           return 301 https://$server_name$request_uri;
+           return 301 https://$host$request_uri;
         }
     {% endif %}
 }
