change timeout and logging for longer reindexing startups

--- a/ansible/roles/cordra/templates/systemd/cordra.service.j2
+++ b/ansible/roles/cordra/templates/systemd/cordra.service.j2
@@ -11,6 +11,7 @@ ExecStartPost={{ server.apps_dir}}/check_port.sh {{ cordra.http_internal_port }}
 ExecStop={{ cordra.dir }}/shutdown
 User={{ server.user }}
 Restart=always
+TimeoutSec=1800
 
 [Install]
 WantedBy=multi-user.target
